--- a/view-time-sheet-service/pom.xml
+++ b/view-time-sheet-service/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.bf</groupId>
-        <artifactId>view-time-sheet-service</artifactId>
+        <artifactId>time-sheet</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
