--- a/view-time-sheet-service/src/main/resources/application.properties
+++ b/view-time-sheet-service/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-spring.data.mongodb.uri=mongodb+srv://admin:9V5MYFrDQSPC2bk@cluster0.uxol8.gcp.mongodb.net/Cluster0?retryWrites=true&w=majority
-spring.data.mongodb.database=test
+#spring.data.mongodb.uri=mongodb+srv://admin:9V5MYFrDQSPC2bk@cluster0.uxol8.gcp.mongodb.net/Cluster0?retryWrites=true&w=majority
+#spring.data.mongodb.database=test
+
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=root
+#spring.data.mongodb.database=gis
