--- a/view-time-sheet-service/src/main/resources/application.properties
+++ b/view-time-sheet-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
-#spring.data.mongodb.username=root
-#spring.data.mongodb.password=root
-#spring.data.mongodb.database=gis
+
+spring.servlet.multipart.enabled =true
+spring.servlet.multipart.max-file-size = 100MB
+
