--- a/view-time-sheet-service/src/main/resources/application.properties
+++ b/view-time-sheet-service/src/main/resources/application.properties
@@ -3,6 +3,9 @@
 
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
+server.port=8081
+eureka.client.service-url.defaultZone=http://localhost:8081
+
 
 spring.servlet.multipart.enabled =true
 spring.servlet.multipart.max-file-size = 100MB
