--- a/view-time-sheet-service/src/main/resources/application.properties
+++ b/view-time-sheet-service/src/main/resources/application.properties
@@ -3,8 +3,10 @@
 
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
+spring.application.name=view-time-sheet-service
+
 server.port=8081
-eureka.client.service-url.defaultZone=http://localhost:8081
+eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 
 
 spring.servlet.multipart.enabled =true
