--- a/session-service/src/main/resources/application.properties
+++ b/session-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.data.mongodb.uri=mongodb+srv://admin:9V5MYFrDQSPC2bk@cluster0.uxol8.gcp.mongodb.net/Cluster0?retryWrites=true&w=majority
 spring.data.mongodb.database=test
 
+spring.application.name=session-service
+
+server.port=8082
+eureka.client.service-url.defaultZone=http://localhost:8888/eureka
+
