--- a/personal-info-service/src/main/resources/application.properties
+++ b/personal-info-service/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://admin:9V5MYFrDQSPC2bk@cluster0.uxol8.gcp.mongodb.net/Cluster0?retryWrites=true&w=majority
+spring.data.mongodb.database=test
