--- a/personal-info-service/src/main/resources/application.properties
+++ b/personal-info-service/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.data.mongodb.uri=mongodb+srv://admin:9V5MYFrDQSPC2bk@cluster0.uxol8.gcp.mongodb.net/Cluster0?retryWrites=true&w=majority
-spring.data.mongodb.database=test
+#spring.data.mongodb.uri=mongodb+srv://admin:9V5MYFrDQSPC2bk@cluster0.uxol8.gcp.mongodb.net/Cluster0?retryWrites=true&w=majority
+#spring.data.mongodb.database=test
+server.port=8083
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.application.name=personal-info-service
+eureka.client.service-url.defaultZone=http://localhost:8888/eureka
